--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="lg:flex gap-10 md:mt-12">
           <!-- --------left card-------- -->
           <div class="w-[440px] h-[435px] bg-yellow-200 rounded-xl mb-10 ">
-            <div class="space-y-4 ml-6 mt-16 ">
+            <div class="space-y-4 ml-6 mt-16 pt-14 md:p-0">
               <h3 class="text-3xl font-bold">T-Shirt For Dogs</h3>
               <p>Discover a world of treats, toys and essentials handpicked for</p>
               <button class="btn w-36 h-8 text-xl ">Shop Now</button>
