--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pet Shop</title>
+  <link rel="stylesheet" href="style.css">
   <!-- ---------Google Font CDN----------- -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -416,7 +417,7 @@
       <div class="flex gap-6 flex-col md:flex-row">
         <!-- --------left-------- -->
         <div
-          class="h-[435px] w-[440px] lg:w-[785px] lg:h-[480px] flex rounded-xl mx-auto lg:ml-0 bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] bg-opacity-100">
+          class="h-[435px] w-[440px] lg:w-[785px] lg:h-[480px] flex rounded-xl mx-auto lg:ml-0 bg-linear-to-r from-cyan-500 to-blue-500 bg">
           <div class="md:my-auto md:ml-20 space-y-2 ml-8 mt-10">
             <h6 class="text-xl font-medium hidden sm:block">Under Price</h6>
             <h3 class="text-3xl adlam-font">Pet Grooming Mitt</h3>
@@ -424,13 +425,13 @@
             <h1 class="adlam-font text-5xl">$7.99</h1>
           </div>
           <div class="relative">
-            <img class="relative z-10  md:mt-0" src="images/cute-dog-mid.png" alt="Cute Dog">
+            <img class="relative z-10  md:mt-0 mt-32 " src="images/cute-dog-mid.png" alt="Cute Dog">
           </div>
         </div>
 
 
         <!-- ----------right--------- -->
-        <div class="bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A] rounded-xl h-[435px] w-[440px] md:w-[650px] md:h-[480px] mx-auto">
+        <div class="bg2 rounded-xl h-[435px] w-[440px] md:w-[650px] md:h-[480px] mx-auto">
           <div class="md:mt-36 md:ml-16 ml-8 mt-10 ">
             <h3 class="text-3xl adlam-font">T-Shirt for Dogs</h3>
             <h1 class="adlam-font text-5xl text-yellow-400">$7.99</h1>
