--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pet Shop</title>
-  <link rel="stylesheet" href="style.css">
+  
   <!-- ---------Google Font CDN----------- -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,6 +29,12 @@
 
     .sora-font {
       font-family: "Sora", serif;
+    }
+    .bg{
+    background-image: linear-gradient( to right, #ACD2FD , #F8CCFB);
+    }
+  .bg2{
+    background-image: linear-gradient(to right,#FFF9F4, #F9DF8A);
     }
   </style>
 </head>
@@ -417,7 +423,7 @@
       <div class="flex gap-6 flex-col md:flex-row">
         <!-- --------left-------- -->
         <div
-          class="h-[435px] w-[440px] lg:w-[785px] lg:h-[480px] flex rounded-xl mx-auto lg:ml-0 bg-linear-to-r from-cyan-500 to-blue-500 bg">
+          class="h-[435px] w-[440px] lg:w-[785px] lg:h-[480px] flex rounded-xl mx-auto lg:ml-0 ">
           <div class="md:my-auto md:ml-20 space-y-2 ml-8 mt-10">
             <h6 class="text-xl font-medium hidden sm:block">Under Price</h6>
             <h3 class="text-3xl adlam-font">Pet Grooming Mitt</h3>
