--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
       <div class="flex gap-6 flex-col md:flex-row">
         <!-- --------left-------- -->
         <div
-          class="h-[435px] w-[440px] lg:w-[785px] lg:h-[480px] flex rounded-xl mx-auto lg:ml-0 ">
+          class="h-[435px] w-[440px] lg:w-[785px] lg:h-[480px] flex rounded-xl mx-auto lg:ml-0 bg">
           <div class="md:my-auto md:ml-20 space-y-2 ml-8 mt-10">
             <h6 class="text-xl font-medium hidden sm:block">Under Price</h6>
             <h3 class="text-3xl adlam-font">Pet Grooming Mitt</h3>
